@@ -176,17 +176,26 @@ class SearchApiAutocompleteSearch extends Entity {
    */
   public function alterElement(array &$element, array $fields = array()) {
     if (search_api_autocomplete_access($this)) {
-
       $fields_string = $fields ? implode(' ', $fields) : '-';
+
       $module_path = drupal_get_path('module', 'search_api_autocomplete');
       $element['#attached']['css'][] = $module_path . '/search_api_autocomplete.css';
       $element['#attached']['js'][] = $module_path . '/search_api_autocomplete.js';
-      if (isset($this->options['submit_button_selector'])) {
+
+      $js_settings = array();
+      if (isset($this->options['submit_button_selector']) && $this->options['submit_button_selector'] != ':submit') {
+        $js_settings['selector'] = $this->options['submit_button_selector'];
+      }
+      if (($delay = variable_get('search_api_autocomplete_delay')) !== NULL) {
+        $js_settings['delay'] = $delay;
+      }
+      if ($js_settings) {
         $element['#attached']['js'][] = array(
           'type' => 'setting',
-          'data' => array('search_api_autocomplete' => array('selector' => $this->options['submit_button_selector'])),
+          'data' => array('search_api_autocomplete' => $js_settings),
         );
       }
+
       $element['#autocomplete_path'] = 'search_api_autocomplete/' . $this->machine_name . '/' . $fields_string;
       $element += array('#attributes' => array());
       $element['#attributes'] += array('class'=> array());
