@@ -1,5 +1,7 @@
 Search API Autocomplete 1.x, dev (xx/xx/xxxx):
 ----------------------------------------------
+- #2503593 by drunken monkey: Added a hidden variable for changing the
+  autocomplete delay.
 - #2475435 by drunken monkey: Added support for switching the autocomplete
   implementation.
 
